# streamManager

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.original.md  CONTRIBUTING.md  Claude-ResearchFixWorkflow.md  INITIAL_PLAN.md  INTENT.md  MEMORY.md  MVP-GAP-REPORT.md  POC_FINDINGS.md  README.md  REQUIREMENTS.md  UI-DESIGN-SPEC.md  package.json  pyproject.toml  smartai.md  streamManagerworkflow.md  todo.md
.claude/: settings.json
dashboard/: requirements.txt  server.py
docs/: 2026-05-18-status.md  2026-05-19-implementation-notes.md  2026-05-19-status.md  2026-05-19-task-list.md  2026-05-21-implementation-notes.md  2026-05-21-task-list.md  2026-05-22-guage-notes.md  2026-05-22-status.md  2026-05-22-task-list.md  2026-05-24-task-list.md  2026-06-11-beta-proposals-initiative.md  BETA-PROPOSALS-RESUME.md  KingModePrompt.txt  ROADMAP.md  intent-todo-gap-2026-05-16.md  learn-mode-design.md  open-tasks-2026-05-16.md  seed-v2.4-g-cli-timeout-audit.md  seed-v2.5-a-row10-diagnosis.md  seed-v2.6-a-row10-remeasure-protocol.md  seed-v2.6-g-step2-timeout-tighten-audit.md  seed-v2.7-a-clip-corpus-protocol.md  seed-v2.7-b-row05-haiku-protocol.md  soak-trigger-matrix.md  sync-comms-qa.md  v1.0-ship-plan.md  v1.1-scope.md  v1.1-task-plan.md  v1.2-followup.md  v1.2-soak-finalize.md  v1.2-task-plan.md  v1.3-backlog.md  v1.3-corrective-action.md  v1.3-drift-audit.md  v1.3-soak-lm-extension.md  v1.3-task-plan.md  v1.3-testing.md  v1.4-backlog.md  v1.5-backlog.md  v1.5-task-plan.md  (+46 more)
how-to/: 01-start-stop.md  02-using-sm.md  03-learn-mode.md  04-cli-reference.md  05-appendix.md  README.md
reports/: 2026-05-06.md  2026-05-08.md  2026-05-20-refire-results.md  DEPRECATION.md  UX-AUDIT-REPORT.md  alignment-eval-20260505T104302Z.json  alignment-eval-20260505T104302Z.md  alignment-eval-20260505T113007Z.json  alignment-eval-20260505T113007Z.md  alignment-eval-20260505T124519Z.json  alignment-eval-20260505T124519Z.md  (+103 more)
rl/: __init__.py  bandit.py  (+11 more)
(+701 files in other folders)
