[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-manager"
version = "0.0.0"
description = "Resource-efficient governance and adaptive-learning bridge between Claude Desktop and a Claude CLI session."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Sean Hoppe", email = "github@seanhoppe.com"}]
license = {text = "TBD"}
keywords = ["claude", "governance", "websocket", "bridge", "ai-safety"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
stream-manager = "stream_manager.__main__:main"
sm = "tools.sm_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stream_manager"]

# Ship only sm_cli (operator CLI) from tools/; perf_probe, soak_driver,
# cassette_record are dev-only scripts and must not enter the wheel.
[tool.hatch.build.targets.wheel.force-include]
"tools/__init__.py" = "tools/__init__.py"
"tools/sm_cli.py" = "tools/sm_cli.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: integration tests that shell out / run end-to-end and take >1s; exclude with `-m 'not slow'` for fast tier",
    "alignment_eval: v1.7 P1 alignment harness — drives real `claude -p` against the L4 golden-set; opt-in with `pytest -m alignment_eval`, exclude with `-m 'not alignment_eval'`",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
